with batching that take only one db call.